sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:15: error: unclosed comment
/*def arrayFront9(nums:Array[Int]): Boolean = { 
^AlgBubbleSort1:15: error: unclosed comment
/*def arrayFront9(nums:Array[Int]): Boolean = { 
^AlgBubbleSort1:15: error: unclosed comment
/*def arrayFront9(nums:Array[Int]): Boolean = { 
^AlgBubbleSort1:2: error: Missing closing brace `}' assumed here
def bubbleSort() {
^AlgBubbleSort1:2: error: expected class or object definition
def bubbleSort() {
^AlgBubbleSort1:15: error: unclosed comment
/*def arrayFront9(nums:Array[Int]): Boolean = { 
^